2000-06-14  Tom Yu  <tlyu@mit.edu>

	* ftpcmd.y (nonguest): Return $1, not 1, if (!guest).

2000-05-11  Nalin Dahyabhai  <nalin@redhat.com>

	* ftpd.c (gunique): Make sure that path stored in "new" isn't too long.

2000-02-18  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (reply, lreply): Declare with format attribute under
	gcc.
	(send_data, receive_data, send_file_list): Declare some variables
	volatile to protect against getting clobbered by setjmp/longjmp.
	* popen.c (ftpd_popen): Declare IOP volatile.

1999-10-26  Wilfredo Sanchez  <tritan@mit.edu>

	* Makefile.in: Clean up usage of CFLAGS, CPPFLAGS, DEFS, DEFINES,
	LOCAL_INCLUDES such that one can override CFLAGS from the command
	line without losing CPP search patchs and defines. Some associated
	Makefile cleanup.

1999-09-21  Ken Raeburn  <raeburn@mit.edu>

	* ftpd.c (checkuser): Only call fclose on file handle if it's not
	NULL.
	(send_file_list): Don't declare strpbrk function if it's defined
	as a macro.

Thu Mar 25 23:13:56 1999  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (login): Check that the luid is not the uid we want to
	change to prior to calling setluid() so that we can run as
	non-root.

Wed Mar 24 17:11:32 1999  Tom Yu  <tlyu@mit.edu>

	* ftpcmd.y (urgsafe_getc): New function; like getc() except it
	retries once if SIOCATMARK returns TRUE.
	(getline): Use urgsafe_getc() rather than getc() to avoid problems
	with certain Mac clients that cause the urgent pointer to end up
	in a location that results in EOF from getc().

Fri Mar 12 07:35:01 1999  Tom Yu  <tlyu@mit.edu>

	* ftpd.c (user): Remove extra "%s" in call to sprintf() to avoid
	dereferencing stack garbage.

Mon Mar  8 23:47:51 1999  Tom Yu  <tlyu@mit.edu>

	* ftpd.M: Resync with reality.

	* Makefile.in (ftpd): Add libpty to link line.  Remove mention of
	logwtmp files.

	* ftpd.c: Fix up hostname logging to use
	pty_make_sane_hostname().

Thu Feb 25 23:31:37 1999  Tom Yu  <tlyu@mit.edu>
